# ISA_DNS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.MD  arguments.cpp  arguments.h  cmake_install.cmake  dns  dns.cpp  dns.h  errorHandling.cpp  errorHandling.h  main  main.cpp  main.h  makefile  output.cpp  output.h
output/: main
test/: CompleteTest.cpp  CompleteTest.h  main.cpp  main.h
test/ArgumentParserTest/: ArgParsTest.cpp  ArgParsTest.h
test/QueryCreateTest/: QueryCreateTest.cpp  QueryCreateTest.h
test/ReadQueryTest/: ReadQueryTest.cpp  ReadQueryTest.h
